--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,49 +1,472 @@
 <ul class='section'>
-<a class='users' href='/users' id='sidebar-section-users'>Users</a>
-<li class='nav-item'>
-<a class='features' href='/users#features' id='sidebar-subsection-features'>Features</a>
+<li class='section-title users'>
+<a href='/users' id='sidebar-section-users'>
+<i class='fa fa-users'></i>
+Users
+</a>
+<li class='subsection-container users'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/users#features' id='sidebar-users-features'>Features</a>
 </li>
-<a class='administrators' href='/administrators' id='sidebar-section-administrators'>Administrators</a>
-<li class='nav-item'>
-<a class='essentials' href='/administrators#essentials' id='sidebar-subsection-essentials'>Essentials</a>
+<li>
+<a href='/how-does-title-and-favicon-notification-work'>How does title and favicon notification work?</a>
 </li>
-<li class='nav-item'>
-<a class='email' href='/administrators#email' id='sidebar-subsection-email'>Email</a>
+<li>
+<a href='/what-are-badges'>What are Badges?</a>
 </li>
-<li class='nav-item'>
-<a class='logins' href='/administrators#logins' id='sidebar-subsection-logins'>Logins</a>
+<li>
+<a href='/what-are-flags-and-how-do-they-work'>What are Flags and how do they work?</a>
 </li>
-<a class='designers' href='/designers' id='sidebar-section-designers'>Designers</a>
-<li class='nav-item'>
-<a class='tweaks' href='/designers#tweaks' id='sidebar-subsection-tweaks'>Tweaks</a>
+<li>
+<a href='/what-are-likes'>What are &quot;Likes&quot;?</a>
 </li>
-<a class='sysadmins' href='/sysadmins' id='sidebar-section-sysadmins'>Sysadmins</a>
-<li class='nav-item'>
-<a class='install' href='/sysadmins#install' id='sidebar-subsection-install'>Install</a>
+<li>
+<a href='/what-are-mentions'>What are Mentions?</a>
 </li>
-<li class='nav-item'>
-<a class='essentials' href='/sysadmins#essentials' id='sidebar-subsection-essentials'>Essentials</a>
+<li>
+<a href='/what-do-user-trust-levels-do'>What do user trust levels do?</a>
 </li>
-<li class='nav-item'>
-<a class='email' href='/sysadmins#email' id='sidebar-subsection-email'>Email</a>
+<li>
+<a href='/what-is-a-wiki-post'>What is a Wiki Post?</a>
 </li>
-<li class='nav-item'>
-<a class='docker' href='/sysadmins#docker' id='sidebar-subsection-docker'>Docker</a>
+<li>
+<a href='/what-is-infinite-scrolling'>What is &quot;Infinite Scrolling&quot;?</a>
 </li>
-<li class='nav-item'>
-<a class='miscellaneous' href='/sysadmins#miscellaneous' id='sidebar-subsection-miscellaneous'>Miscellaneous</a>
+</ul>
 </li>
-<a class='developers' href='/developers' id='sidebar-section-developers'>Developers</a>
-<li class='nav-item'>
-<a class='environment' href='/developers#environment' id='sidebar-subsection-environment'>Environment</a>
 </li>
-<li class='nav-item'>
-<a class='forum-import' href='/developers#forum-import' id='sidebar-subsection-forum-import'>Forum import</a>
+<li class='administrators section-title'>
+<a href='/administrators' id='sidebar-section-administrators'>
+<i class='fa fa-trophy'></i>
+Administrators
+</a>
+<li class='administrators subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/administrators#essentials' id='sidebar-administrators-essentials'>Essentials</a>
 </li>
-<li class='nav-item'>
-<a class='creating-plugins' href='/developers#creating-plugins' id='sidebar-subsection-creating-plugins'>Creating plugins</a>
+<li>
+<a href='/configure-automatic-backups-for-discourse'>Configure automatic backups for Discourse</a>
 </li>
-<li class='nav-item'>
-<a class='hacking' href='/developers#hacking' id='sidebar-subsection-hacking'>Hacking</a>
+<li>
+<a href='/configure-custom-emoji'>Configure custom emoji</a>
+</li>
+<li>
+<a href='/configure-your-domain-name-for-hosted-discourse'>Configure your domain name for hosted Discourse</a>
+</li>
+<li>
+<a href='/creating-and-submitting-xml-sitemaps-to-google-bing-yandex'>Creating and Submitting XML Sitemaps to Google, Bing &amp; Yandex</a>
+</li>
+<li>
+<a href='/customize-subject-format-for-standard-emails'>Customize subject format for standard emails</a>
+</li>
+<li>
+<a href='/export-user-information-list'>Export User Information List</a>
+</li>
+<li>
+<a href='/grant-a-badge-to-individual-users-manually'>Grant a badge to individual users manually</a>
+</li>
+<li>
+<a href='/how-to-change-faq-privacy-policy-and-terms-of-service'>How to change FAQ, Privacy Policy, and Terms of Service</a>
+</li>
+<li>
+<a href='/how-to-enable-piwik-analytics-on-discourse'>How to enable Piwik analytics on Discourse</a>
+</li>
+<li>
+<a href='/link-user-title-to-a-group'>Link User Title to a Group</a>
+</li>
+<li>
+<a href='/recover-a-user-who-was-deleted-as-a-spammer'>Recover a user who was deleted as a spammer</a>
+</li>
+<li>
+<a href='/sending-bulk-user-invites'>Sending Bulk User Invites</a>
+</li>
+<li>
+<a href='/setting-up-file-and-image-uploads-to-s3'>Setting up file and image uploads to S3</a>
+</li>
+<li>
+<a href='/some-common-badge-queries-idea'>Some common badge queries idea</a>
+</li>
+</ul>
+</li>
+<li class='administrators subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/administrators#email' id='sidebar-administrators-email'>Email</a>
+</li>
+<li>
+<a href='/how-to-configure-mailbox-in-google-apps-for-user-friendly-incoming-email-addresses-for-discourse-categories-with-screenshots'>How to configure mailbox in Google Apps for user-friendly incoming email addresses for discourse categories (with screenshots)</a>
+</li>
+<li>
+<a href='/set-up-email-in-start-topic-via-email'>Set up &quot;Email In&quot; (start topic via email)</a>
+</li>
+<li>
+<a href='/set-up-reply-via-email-support'>Set up reply via email support</a>
+</li>
+<li>
+<a href='/use-one-fastmail-account-to-serve-multiple-discourse-instances'>Use one Fastmail account to serve multiple Discourse instances</a>
+</li>
+</ul>
+</li>
+<li class='administrators subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/administrators#logins' id='sidebar-administrators-logins'>Logins</a>
+</li>
+<li>
+<a href='/configuring-facebook-login-for-discourse'>Configuring Facebook login for Discourse</a>
+</li>
+<li>
+<a href='/configuring-github-login-for-discourse'>Configuring GitHub login for Discourse</a>
+</li>
+<li>
+<a href='/configuring-google-oauth2-login-for-discourse'>Configuring Google OAuth2 login for Discourse</a>
+</li>
+<li>
+<a href='/configuring-twitter-login-for-discourse'>Configuring Twitter login for Discourse</a>
+</li>
+<li>
+<a href='/using-discourse-as-a-sso-provider'>Using Discourse as a SSO provider</a>
+</li>
+</ul>
+</li>
+</li>
+<li class='designers section-title'>
+<a href='/designers' id='sidebar-section-designers'>
+<i class='fa fa-desktop'></i>
+Designers
+</a>
+<li class='designers subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/designers#tweaks' id='sidebar-designers-tweaks'>Tweaks</a>
+</li>
+<li>
+<a href='/custom-header-with-dropdown-navigation'>Custom header with dropdown navigation</a>
+</li>
+<li>
+<a href='/custom-nav-header-like-discourse-org'>Custom nav header like discourse.org</a>
+</li>
+</ul>
+</li>
+</li>
+<li class='section-title sysadmins'>
+<a href='/sysadmins' id='sidebar-section-sysadmins'>
+<i class='fa fa-cog'></i>
+Sysadmins
+</a>
+<li class='subsection-container sysadmins'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/sysadmins#install' id='sidebar-sysadmins-install'>Install</a>
+</li>
+<li>
+<a href='/install'>How Do I Install Discourse?</a>
+</li>
+<li>
+<a href='/install-cloud'>Install Discourse in the Cloud</a>
+</li>
+<li>
+<a href='/how-to-create-an-administrator-account-after-install'>How to create an administrator account after install</a>
+</li>
+<li>
+<a href='/change-the-domain-name-or-rename-my-discourse'>Change the domain name or rename my Discourse?</a>
+</li>
+</ul>
+</li>
+<li class='subsection-container sysadmins'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/sysadmins#essentials' id='sidebar-sysadmins-essentials'>Essentials</a>
+</li>
+<li>
+<a href='/change-the-domain-name-or-rename-my-discourse'>Change the domain name or rename my Discourse?</a>
+</li>
+<li>
+<a href='/change-tracking-branch-for-your-discourse-instance'>Change tracking branch for your Discourse instance</a>
+</li>
+<li>
+<a href='/enable-a-cdn-for-your-discourse'>Enable a CDN for your Discourse</a>
+</li>
+<li>
+<a href='/full-site-cdn-acceleration-for-discourse'>Full site CDN acceleration for Discourse</a>
+</li>
+<li>
+<a href='/how-do-i-update-my-docker-image-to-latest'>How do I update my Docker image to latest?</a>
+</li>
+<li>
+<a href='/install-a-plugin'>Install a Plugin</a>
+</li>
+<li>
+<a href='/move-your-discourse-instance-to-a-different-server'>Move your Discourse Instance to a Different Server</a>
+</li>
+</ul>
+</li>
+<li class='subsection-container sysadmins'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/sysadmins#email' id='sidebar-sysadmins-email'>Email</a>
+</li>
+<li>
+<a href='/configure-your-domain-for-discourse-hosted-email'>Configure your domain for Discourse hosted email</a>
+</li>
+<li>
+<a href='/how-to-use-a-self-signed-cert-with-discourse-for-emails'>How to use a self-signed cert with Discourse for emails</a>
+</li>
+<li>
+<a href='/troubleshooting-email-on-a-new-discourse-install'>Troubleshooting email on a new Discourse install</a>
+</li>
+</ul>
+</li>
+<li class='subsection-container sysadmins'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/sysadmins#docker' id='sidebar-sysadmins-docker'>Docker</a>
+</li>
+<li>
+<a href='/understanding-discourse-docker'>Understanding Discourse Docker</a>
+</li>
+<li>
+<a href='/multisite-configuration-with-docker'>Multisite configuration with Docker</a>
+</li>
+<li>
+<a href='/how-to-configure-discourse-docker-on-higher-end-servers'>How to configure Discourse Docker on higher end servers</a>
+</li>
+<li>
+<a href='/how-to-use-docker-multiple-containers-without-exposing-ports'>How to use Docker multiple containers without exposing ports</a>
+</li>
+<li>
+<a href='/migrating-an-old-discourse-install-to-docker'>Migrating an old Discourse install to Docker</a>
+</li>
+<li>
+<a href='/host-run-support-for-launcher'>Host run support for launcher</a>
+</li>
+<li>
+<a href='/running-other-websites-on-the-same-machine-as-discourse'>Running other websites on the same machine as Discourse</a>
+</li>
+<li>
+<a href='/subfolder-support-with-docker'>Subfolder support with Docker</a>
+</li>
+<li>
+<a href='/troubleshooting-docker-installation-issues'>Troubleshooting Docker Installation Issues</a>
+</li>
+<li>
+<a href='/advanced-setup-and-administration'>Advanced Setup and Administration</a>
+</li>
+</ul>
+</li>
+<li class='subsection-container sysadmins'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/sysadmins#miscellaneous' id='sidebar-sysadmins-miscellaneous'>Miscellaneous</a>
+</li>
+<li>
+<a href='/adjust-discourse-search-to-work-with-cjk-languages'>Adjust Discourse search to work with CJK languages</a>
+</li>
+<li>
+<a href='/advanced-manual-method-of-manually-creating-and-restoring-discourse-backups'>Advanced, manual method of manually creating and restoring Discourse backups</a>
+</li>
+<li>
+<a href='/adventures-in-haproxy-and-varnish-with-discourse-because-i-hate-myself'>Adventures in haproxy and varnish with discourse because i hate myself</a>
+</li>
+<li>
+<a href='/beginners-guide-to-install-discourse-on-mac-os-x-for-development'>Beginners Guide to Install Discourse on Mac OS X for Development</a>
+</li>
+<li>
+<a href='/beginners-guide-to-install-discourse-on-ubuntu-for-development'>Beginners Guide to Install Discourse on Ubuntu for Development</a>
+</li>
+<li>
+<a href='/changing-max-attachment-size'>Changing Max Attachment Size</a>
+</li>
+<li>
+<a href='/configure-a-firewall-for-discourse'>Configure a firewall for Discourse</a>
+</li>
+<li>
+<a href='/create-a-swapfile-for-your-linux-server'>Create a swapfile for your Linux server</a>
+</li>
+<li>
+<a href='/create-admin-account-from-console'>Create Admin Account from Console</a>
+</li>
+<li>
+<a href='/deploy-discourse-to-an-ubuntu-vps-using-capistrano'>Deploy Discourse to an Ubuntu VPS using Capistrano</a>
+</li>
+<li>
+<a href='/deploying-discourse-to-amazon-and-other-clouds'>Deploying Discourse to Amazon (and other clouds)</a>
+</li>
+<li>
+<a href='/how-do-i-enable-dkim-for-non-hosted-discourse-emails'>How do I enable DKIM for non-hosted Discourse emails?</a>
+</li>
+<li>
+<a href='/how-to-deploy-discourse-in-8-minutes-with-juju'>How to deploy Discourse in 8 minutes with Juju</a>
+</li>
+<li>
+<a href='/how-to-set-up-discourse-on-a-server-with-existing-apache-sites'>How to set up Discourse on a server with existing Apache sites</a>
+</li>
+<li>
+<a href='/migrating-from-heroku-to-a-hosted-cloud-instance'>Migrating from Heroku to a Hosted/Cloud instance</a>
+</li>
+<li>
+<a href='/redirect-single-multiple-domain-s-to-your-discourse-instance'>Redirect single/multiple domain(s) to your Discourse instance</a>
+</li>
+<li>
+<a href='/replace-rubygems-org-with-taobao-mirror-to-resolve-network-error-in-china'>Replace rubygems.org with taobao mirror to resolve network error in China</a>
+</li>
+<li>
+<a href='/simple-discourse-deployment-with-rubber'>Simple Discourse Deployment with Rubber</a>
+</li>
+</ul>
+</li>
+</li>
+<li class='developers section-title'>
+<a href='/developers' id='sidebar-section-developers'>
+<i class='fa fa-code'></i>
+Developers
+</a>
+<li class='developers subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/developers#environment' id='sidebar-developers-environment'>Environment</a>
+</li>
+<li>
+<a href='/developer-advanced'>Discourse Advanced Developer Install Guide</a>
+</li>
+<li>
+<a href='/development-osx-native'>Developing under OS X Without Vagrant</a>
+</li>
+<li>
+<a href='/security'></a>
+</li>
+<li>
+<a href='/setting-up-docker-in-virtualbox-for-production-testing'>Setting up Docker in Virtualbox for &#39;production&#39; testing</a>
+</li>
+<li>
+<a href='/testing'>Discourse Developer Testing Guide</a>
+</li>
+<li>
+<a href='/troubleshooting-prod'></a>
+</li>
+<li>
+<a href='/vagrant'>Discourse Developer Install Guide (Vagrant)</a>
+</li>
+</ul>
+</li>
+<li class='developers subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/developers#creating-plugins' id='sidebar-developers-creating-plugins'>Creating plugins</a>
+</li>
+<li>
+<a href='/beginners-guide-to-creating-discourse-plugins'>Beginner&#39;s Guide to Creating Discourse Plugins</a>
+</li>
+<li>
+<a href='/beginners-guide-to-creating-discourse-plugins-part-2-plugin-outlets'>Beginner&#39;s Guide to Creating Discourse Plugins Part 2: Plugin Outlets</a>
+</li>
+<li>
+<a href='/beginners-guide-to-creating-discourse-plugins-part-3-custom-settings'>Beginner&#39;s Guide to Creating Discourse Plugins Part 3: Custom Settings</a>
+</li>
+<li>
+<a href='/beginners-guide-to-creating-discourse-plugins-part-4-git-setup'>Beginner&#39;s Guide to Creating Discourse Plugins Part 4: Git Setup</a>
+</li>
+<li>
+<a href='/beginners-guide-to-creating-discourse-plugins-part-5-admin-interfaces'>Beginner&#39;s Guide to Creating Discourse Plugins Part 5: Admin Interfaces</a>
+</li>
+<li>
+<a href='/beginner-s-guide-to-creating-discourse-plugins-part-6-acceptance-tests'>Beginner’s Guide to Creating Discourse Plugins Part 6: Acceptance Tests</a>
+</li>
+<li>
+<a href='/plugin-outlet-locations'>Plugin Outlet Locations</a>
+</li>
+<li>
+<a href='/plugin-tutorial-1-how-to-manipulate-the-text-in-the-composer'>Plugin Tutorial</a>
+</li>
+</ul>
+</li>
+<li class='developers subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/developers#hacking' id='sidebar-developers-hacking'>Hacking</a>
+</li>
+<li>
+<a href='/using-the-discourse-api-ruby-gem'>Using the Discourse API Ruby Gem</a>
+</li>
+<li>
+<a href='/discourse-api-documentation'>Discourse API Documentation</a>
+</li>
+<li>
+<a href='/how-to-reverse-engineer-the-discourse-api'>How to reverse engineer the Discourse API</a>
+</li>
+<li>
+<a href='/adding-plugin-outlets-using-site-customizations'>Adding plugin-outlets using site customizations</a>
+</li>
+<li>
+<a href='/create-group-via-api'>Create group via API</a>
+</li>
+<li>
+<a href='/generating-lots-of-invite-links'>Generating lots of Invite Links</a>
+</li>
+<li>
+<a href='/invite-individual-users-to-a-group'>Invite individual users to a group</a>
+</li>
+<li>
+<a href='/a-badge-for-all-members-of-a-group'>A badge for all members of a group</a>
+</li>
+<li>
+<a href='/triggered-custom-badge-queries'>Triggered custom badge queries</a>
+</li>
+<li>
+<a href='/edit-a-user-setting-for-all-discourse-users'>Edit a user setting for all Discourse users</a>
+</li>
+<li>
+<a href='/embedding-discourse-comments-via-javascript'>Embedding Discourse Comments via Javascript</a>
+</li>
+<li>
+<a href='/message-format-support-for-localization'>Message Format support for localization</a>
+</li>
+<li>
+<a href='/how-to-test-discourse-in-mobile-screen-emulator'>How to test Discourse in mobile screen emulator</a>
+</li>
+<li>
+<a href='/any-kind-of-data-input-also-anonymous-through-google-forms'>Any kind of Data-Input (also anonymous) through Google-Forms</a>
+</li>
+<li>
+<a href='/tuning-ruby-and-rails-for-discourse'>Tuning Ruby and Rails for Discourse</a>
+</li>
+<li>
+<a href='/official-single-sign-on-for-discourse'>Official Single-Sign-On for Discourse</a>
+</li>
+</ul>
+</li>
+<li class='developers subsection-container'>
+<ul class='subsection'>
+<li class='subsection-title'>
+<a href='/developers#forum-import' id='sidebar-developers-forum-import'>Forum import</a>
+</li>
+<li>
+<a href='/migrating-to-discourse-from-another-forum-software'>Migrating to Discourse from another Forum software</a>
+</li>
+<li>
+<a href='/importing-from-phpbb3'>Importing from phpBB3</a>
+</li>
+<li>
+<a href='/how-to-migrate-from-vanilla-to-discourse'>How to migrate from Vanilla to Discourse!</a>
+</li>
+<li>
+<a href='/how-to-import-a-phorum-database-via-vanilla-porter'>How to import a Phorum database (via Vanilla Porter)</a>
+</li>
+<li>
+<a href='/import-posts-from-facebook-group-into-discourse'>Import posts from Facebook group into Discourse</a>
+</li>
+<li>
+<a href='/import-from-google-groups-to-discourse'>Import from Google Groups to Discourse</a>
+</li>
+<li>
+<a href='/archive-an-old-forum-in-place-to-start-a-new-discourse-forum'>Archive an old forum &quot;in place&quot; to start a new Discourse forum</a>
+</li>
+<li>
+<a href='/redirecting-old-forum-urls-to-new-discourse-urls'>Redirecting old forum URLs to new Discourse URLs</a>
+</li>
+</ul>
+</li>
 </li>
 </ul>
