--- a/_sass/portal.scss
+++ b/_sass/portal.scss
@@ -1,7 +1,7 @@
 /* Rainbow portal page customization */
 .portal-header.home {
-  background: $portal-users-main-bg-color;
-  color: $portal-users-musthead-color;
+  background: $main-bg-color;
+  color: $main-musthead-color;
 }
 .portal-header.users {
   background: $portal-users-main-bg-color;
