--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -2,7 +2,7 @@
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   float: left;
   margin-right: 20px;
-  width: 180px;
+  width: 15%;
   padding: 11px 12px 16px 16px;
   background-color: #f1f1f1;
 }
