--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,11 @@ layout: base
 ---
 
 <section class="portal-header {{ page.section }}">
-  <h1>{{ site.t[page.lang][page.section].title }}</h1>
+  <div class="pull-left">
+    <h1>{{ site.t[page.lang][page.section].title }}</h1>
+  </div>
+  <div class="search-box pull-right"><gcse:search></gcse:search></div>
+  <div class="clearfix"></div>
   <p class="description">
     {{ site.t[page.lang][page.section].description }}
   </p>
