Set Google Custom Search to open in the same tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ layout: base
   <div class="pull-left">
     <h1>{{ site.t[page.lang][page.section].title }}</h1>
   </div>
-  <div class="search-box pull-right"><gcse:search></gcse:search></div>
+  <div class="search-box pull-right"><gcse:search linktarget="_parent"></gcse:search></div>
   <div class="clearfix"></div>
   <p class="description">
     {{ site.t[page.lang][page.section].description }}
