--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -16,7 +16,7 @@ layout: base
       </ul>
     </nav>
   </div>
-  <div class="search-box pull-right"><gcse:search></gcse:search></div>
+  <div class="search-box pull-right"><gcse:search linktarget="_parent"></gcse:search></div>
   <div class="clearfix"></div>
   <h1 class="documentation-title">{{ page.title }}</h1>
 </header>
